--- a/Blog.IdentityServer/appsettings.json
+++ b/Blog.IdentityServer/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=D:\\Code\\Study\\anjoy8\\Blog.Core\\Blog.Core\\WMBlog.db;",
-    //"DefaultConnection": "server=.;uid=sa;pwd=123456;database=BlogIdp",
-    "DefaultConnection_file": "D:\\my-file\\dbCountPsw1_ldp.txt"
+    //"DefaultConnection": "Data Source=D:\\Code\\Study\\anjoy8\\Blog.Core\\Blog.Core\\WMBlog.db;",
+    "DefaultConnection": "server=127.0.0.1;uid=BlogIdpUser;pwd=123456;database=BlogIdp"
+    //"DefaultConnection_file": "D:\\my-file\\dbCountPsw1_ldp.txt"
   }
 }
